Changes for 1.8.1

 - [ZBX-1476] fixed host links in map (Aly)
 - [ZBX-1605] fixed map with host element under maintenance (Aly)
 - [ZBX-1507] fixed userid added instead of ip for some audit actions (Vedmak)
 - [ZBX-1563] fixed error when view history for log type item (Vedmak)
 - [ZBX-1556] fixed importing graphs with items that does not exist in system (Vedmak)
 - [ZBX-1515] fixed json encode/decode with mb overload enabled (Aly)
 - [ZBX-1623] fixed no proxy listed when admin edits host (Vedmak)
 - [ZBX-1456] fixed map update on linkage properties change (Aly)
 - [ZBX-1625] when mass update hosts, defaul "connect to" option is set to IP (Vedmak)
 - [ZBX-1479] fixed host mass update (Vedmak)
 - [ZBX-1628] removed templates from status of triggers screen (Aly)
 - [ZBX-1508] fixed action map creation (Aly)
 - [ZBX-1593] fixed errors when admin tries to add hostgroup editin host (Vedmak)
 - [ZBX-1621] fixed ITservices graphs text dispaying (Vedmak)
 - [ZBX-1553] fixed host group mass activate\disable operation (Vedmak)
 - [ZBX-1455] added sorting for host\global macros (Vedmak)
 - [ZBX-1523] fixed last macros deletion (Vedmak)
 - [ZBX-1619] fixed web scenario data not removed from DB when host is deleted (Vedmak)
 - [ZBX-1567] fixed availability graph text displaying (Vedmak)
 - [ZBX-1581] fixed wrong group saved as discovery group in Administration->General (Vedmak)
 - [ZBX-1592] user groups are now sorted in user list and editing form (Vedmak)
 - [ZBX-1475] improved elements status checks (Aly)
 - [ZBX-1598] fixed empty application list when mass update template items (Vedmak)
 - [ZBX-1612] fixed "API access" and "Disabled" group permissions; patch by Kodai (Richlv)
 - [ZBX-1606] fixed showing icon errors with qoutes in error text (Vedmak)
 - [ZBX-1571] fixed errors when adding proxy (Vedmak)
 - [ZBX-1585] fixed editing time in calendar popup in ie6/7 (Vedmak)